<resources>
    <string name="app_name">Memories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="memories_from_april">Memories From April</string>
    <string name="my_memories">My Memories</string>
    <string name="see_more_memories">See More Memories</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="memories_from_february">Memories From February</string>
    <string name="memories_from_january">Memories From January</string>
    <string name="memories_from_march">Memories From March</string>
    <string name="memories_from_june">Memories From June</string>
    <string name="memories_from_july">Memories From July</string>
</resources>