<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.cardview.widget.CardView
            android:id="@+id/memory_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/memories_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/memories_from_march"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="220dp"
                    android:contentDescription="@string/my_memories"
                    android:src="@drawable/march"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memories_from" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/more_memories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:fontFamily="cursive"
            android:paddingVertical="36dp"
            android:text="@string/see_more_memories"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memory_card"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/january"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/january"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/more_memories" />

        <Button
            android:id="@+id/february"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/february"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/more_memories" />


        <Button
            android:id="@+id/april"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/april"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/january" />


        <Button
            android:id="@+id/may"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/may"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/february" />


        <Button
            android:id="@+id/june"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/june"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/april" />


        <Button
            android:id="@+id/july"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/july"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/may" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>